Fix - Showcase grid gap

--- a/assets/stylesheet/scss/pages/home/sections/_showcase.scss
+++ b/assets/stylesheet/scss/pages/home/sections/_showcase.scss
@@ -11,7 +11,7 @@
     .row,
     .f-row {
       .photo {
-        margin-top: 10px;
+        margin-top: 20px;
       }
     }
 
